@@ -11,6 +11,8 @@
 	* [Convars] Added check to prevent CVAR_SYTEMINFO from overwriting existing convars
 	* [SoundSystem] Fixed memory leak
 	* [Misc] Fixed compiling
+	* [Client] Ensure timescale is 1 once dropping to main menu from e.g timescaled demo
+	* [Engine] Don't do twice "vid_restart" on first run
 
 2021-04-11 dGr8LookinSparky <hissparkyness@gmail.com>
 	* [Client]Fix the mouse sensitivity for when cl_mouseAccel is disabled.
